<resources>
    <string name="app_name">bestMlewi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="dashboard">Dashboard</string>
    <string name="employees">Employees</string>
    <string name="orders">Orders</string>
    <string name="sales_point">Sales Point</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>

    <string name="select_sales_point">Sélectionnez un point de vente</string>

    <!-- Language options for spinner -->
    <string-array name="languages_array">
        <item>English</item>
        <item>French</item>
        <item>Arabic</item>
    </string-array>

</resources>